--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,1 +1,8 @@
-<p>main works!</p>
+<main>
+  <div class="container">
+      <div class="main-menu">
+          <div class="menu-item" ><a href="#">按鈕一</a></div>
+          <div class="menu-item" ><a href="#">按鈕二</a></div>
+      </div>
+  </div>
+</main>
