--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* 引用 Angular Material 預建主題 */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
