--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,8 +1,13 @@
-<main>
+<div>
   <div class="container">
-      <div class="main-menu">
-          <div class="menu-item" ><a href="#">按鈕一</a></div>
-          <div class="menu-item" ><a href="#">按鈕二</a></div>
-      </div>
+    <div class="main-menu">
+      <div class="menu-item"><a href="/main1">按鈕一</a></div>
+      <div class="menu-item"><a href="/main2">按鈕二</a></div>
+    </div>
   </div>
-</main>
+  <div class="container">
+    <div class="main-menu">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
