調整：頁面佈局規劃

--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -3,13 +3,13 @@
     <div class="menu display-flex flex-align-items">
       <ul>
         <li>
-          首頁
+          新增一筆資料
         </li>
         <li>
-          報表
+          修改一筆資料
         </li>
         <li>
-          設定
+          刪除勾選清單
         </li>
       </ul>
     </div>
