--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,9 +1,10 @@
 <div>
   <div class="container">
     <div class="main-menu">
-      <div class="menu-item"><a href="/main1">按鈕一</a></div>
-      <div class="menu-item"><a href="/main2">按鈕二</a></div>
+      <div class="menu-item"><a href="/main1">小資料量報表</a></div>
+      <div class="menu-item"><a href="/main2">大資料量報表</a></div>
     </div>
+    <hr />
   </div>
   <div class="container">
     <div class="main-menu">
