--- a/src/app/page/main/main-data/main-data.component.html
+++ b/src/app/page/main/main-data/main-data.component.html
@@ -1,5 +1,16 @@
 <app-filter-ui></app-filter-ui>
 
-<p>Data Table Style 1</p>
+<caption class="TitleNoWrap">
+  我是資料表一
+</caption>
+<table mat-table [dataSource]="dataElements" style="width: 300px;" class="mat-elevation-z8">
+  <ng-container [matColumnDef]="column" *ngFor="let column of dataElementsColumns">
+    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+    <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
+</table>
 
 <app-pagination></app-pagination>
