新增：資料表二大資料呈現 新增：資料表元件提供外部傳入資料表名稱呈現 修正：資料表因為欄位過多造成畫面呈現文字擁擠問題

--- a/src/app/page/main/main-data2/main-data2.component.html
+++ b/src/app/page/main/main-data2/main-data2.component.html
@@ -1,5 +1,5 @@
 <app-filter-ui></app-filter-ui>
 
-<p>Data Table Style 2</p>
+<app-show-data [dataElements]="dataElements" [reportName]="'我是大資料報表'"></app-show-data>
 
 <app-pagination></app-pagination>
