新增：建立 DatePicker 查詢條件            - MatInputModule            - MatFormFieldModule            - MatDatepickerModule            - MatNativeDateModule            - MatMomentDateModule            - BrowserAnimationsModule               - 套件來源 @angular/platform-browser/animations 調整：查詢條件區塊版面切版 新增：引用 DatePicker 所需套件 [angular/material-moment-adapter]、[moment]

--- a/src/app/page/main/filter-ui/filter-ui.component.html
+++ b/src/app/page/main/filter-ui/filter-ui.component.html
@@ -1,3 +1,14 @@
 <p>查詢條件</p>
 
-<p>各查詢條件元件放置區</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm"><app-date-picker-filter></app-date-picker-filter></div>
+    <div class="col-sm">查詢條件元件</div>
+    <div class="w-100"></div>
+    <div class="col-sm">查詢條件元件</div>
+    <div class="col-sm">查詢條件元件</div>
+</div>
+
+<br />
+<hr />
+<hr />
