--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,12 +1,12 @@
 <div>
   <div class="container">
-    <div class="main-menu">
-      <div class="menu-item"><a href="/main1">小資料量報表</a></div>
-      <div class="menu-item"><a href="/main2">大資料量報表</a></div>
+    <div class="row main-menu">
+      <div class="col"></div>
+      <div class="col menu-item"><a href="/main1">小資料量報表</a></div>
+      <div class="col menu-item"><a href="/main2">大資料量報表</a></div>
+      <div class="col"></div>
     </div>
     <hr />
-  </div>
-  <div class="container">
     <div class="main-menu">
       <router-outlet></router-outlet>
     </div>
