--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -2,13 +2,13 @@
   <div class="wrapper">
     <div class="menu display-flex flex-align-items">
       <ul>
-        <li>
+        <li class="list-group-item list-group-item-action list-group-item-primary">
           新增一筆資料
         </li>
-        <li>
+        <li class="list-group-item list-group-item-action list-group-item-success">
           修改一筆資料
         </li>
-        <li>
+        <li class="list-group-item list-group-item-action list-group-item-danger">
           刪除勾選清單
         </li>
       </ul>
