--- a/src/app/page/main/filter-ui/filter-ui.component.html
+++ b/src/app/page/main/filter-ui/filter-ui.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm"><app-date-picker-filter></app-date-picker-filter></div>
+    <div class="col-sm"><app-date-picker-filter (timeValueChange)="setDateFilter($event)"></app-date-picker-filter></div>
     <div class="col-sm">查詢條件元件</div>
     <div class="w-100"></div>
     <div class="col-sm">查詢條件元件</div>
