--- a/src/app/page/main/filter-ui/date-picker-filter/date-picker-filter.component.html
+++ b/src/app/page/main/filter-ui/date-picker-filter/date-picker-filter.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input matInput [matDatepicker]="tpicker" (dateChange)="setTimeValue($event)" placeholder="Choose a date" />
+  <input matInput [matDatepicker]="tpicker" (dateChange)="setTimeValue($event)" placeholder="{{ filterElement.name }}" [value]="filterElement.value" [id]="filterElement.id" />
   <mat-datepicker-toggle matSuffix [for]="tpicker"></mat-datepicker-toggle>
   <mat-datepicker #tpicker></mat-datepicker>
 </mat-form-field>
