新增：純數字查詢條件 調整：ngSwitchCase 支援多重條件

--- a/src/app/page/main/filter-ui/filter-ui.component.html
+++ b/src/app/page/main/filter-ui/filter-ui.component.html
@@ -16,7 +16,7 @@
           (ValueChange)="ValueChange($event)"
         ></app-time-picker-filter>
         <app-input-filter
-          *ngSwitchCase="FType[FType.InputTextBox]"
+          *ngSwitchCase="(FType[filter.type] === FType[FType.StringInput]) || FType[filter.type] === (FType[FType.NumberInput]) ? FType[filter.type] : ''"
           [filterElement]="filter"
           (ValueChange)="ValueChange($event)"
         ></app-input-filter>
