調整：查詢條件 Label 文字都在左邊

--- a/src/app/page/main/filter-ui/check-box-filter/check-box-filter.component.html
+++ b/src/app/page/main/filter-ui/check-box-filter/check-box-filter.component.html
@@ -1,3 +1,3 @@
-<mat-checkbox (change)="changeChecked($event)" [value]="filterElement.value" [id]="filterElement.id">
+<mat-checkbox labelPosition="before" (change)="changeChecked($event)" [value]="filterElement.value" [id]="filterElement.id">
   {{ filterElement.name }}
 </mat-checkbox>
