--- a/src/app/page/main/filter-ui/radio-button-filter/radio-button-filter.component.html
+++ b/src/app/page/main/filter-ui/radio-button-filter/radio-button-filter.component.html
@@ -1,6 +1,6 @@
 <section class="section">
   <label style="margin: 0 10px;">{{ filterElement.name }} : </label>
-  <mat-radio-group [(ngModel)]="defaultSelect" (change)="changeChecked($event)">
+  <mat-radio-group labelPosition="before" [(ngModel)]="defaultSelect" (change)="changeChecked($event)">
     <mat-radio-button
       *ngFor="let item of filterElement.dataSource;"
       style="margin: 0 10px;"
