--- a/src/app/page/main/filter-ui/slide-toggle-filter/slide-toggle-filter.component.html
+++ b/src/app/page/main/filter-ui/slide-toggle-filter/slide-toggle-filter.component.html
@@ -1,3 +1,3 @@
-<mat-slide-toggle (change)="changeSelected($event)" [checked]="getDefaltChecked()" [id]="filterElement.id">
+<mat-slide-toggle labelPosition="before" (change)="changeSelected($event)" [checked]="getDefaltChecked()" [id]="filterElement.id">
   {{ filterElement.name }}
 </mat-slide-toggle>
