新增：Dialog 視窗，外部傳入資料的處理 調整：取得 Filter UI 顯示的 JSON 清單資料來源            - 都從 app-filter-ui component 拉到外部決定            - [尚未解決] 如果查詢條件有清單時，              會造開啟 Dialog 編輯視窗內的 CheckBox & RadioButton 操作失效，但是實際有觸發事件              如果查詢條件是空的，則按鈕操作就會正常

--- a/src/app/page/main/filter-ui/filter-ui.component.html
+++ b/src/app/page/main/filter-ui/filter-ui.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row align-items-center">
-    <ng-container *ngFor="let filter of filterList; let i = index;">
+    <ng-container *ngFor="let filter of filterSource; let i = index;">
       <div class="w-100" *ngIf="getDivW100(i)"></div>
       <div class="col-sm" [ngSwitch]="FType[filter.type]">
 
