--- a/src/app/page/main/main-data/main-data.component.html
+++ b/src/app/page/main/main-data/main-data.component.html
@@ -1,4 +1,4 @@
-<app-filter-ui></app-filter-ui>
+<app-filter-ui [filterList]="data"></app-filter-ui>
 
 <app-show-data [dataElements]="dataElements" [reportName]="'我是小資料報表'"></app-show-data>
 
