--- a/src/app/page/main/edit-data-source/edit-data-source.component.html
+++ b/src/app/page/main/edit-data-source/edit-data-source.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>使用者 Dialog 編輯頁面</h1>
 <div mat-dialog-content>
-  <app-filter-ui></app-filter-ui>
+  <app-filter-ui [filterList]="data"></app-filter-ui>
 </div>
 
 <div mat-dialog-actions>
