修正：app-filter-ui 內部每個單一元件使用到共用物件造成同步修改同物件問題 修正：Material ICon 無法正常使用問題            - 需要引用圖示參考 新增：凍結視窗需要的物件定義            - 功能 [尚未實作] 新增：Dialog 來源資料由外部傳入

--- a/src/app/page/main/edit-data-source/edit-data-source.component.html
+++ b/src/app/page/main/edit-data-source/edit-data-source.component.html
@@ -1,11 +1,11 @@
 <h1 mat-dialog-title>使用者 Dialog 編輯頁面</h1>
 <div mat-dialog-content>
-  <app-filter-ui [filterList]="data"></app-filter-ui>
+  <app-filter-ui [filterList]="DataSource" (FormValueChange)="changeFormValue($event)"></app-filter-ui>
 </div>
 
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">取消</button>
-  <button mat-button (click)="onResetClick()">重置</button>
+<div mat-dialog-actions style="float:right;">
+  <button mat-stroked-button color="accent" (click)="onNoClick()">取消</button>
+  <button mat-stroked-button color="accent" (click)="onResetClick()">重置</button>
   <!-- <button mat-button [mat-dialog-close]="data" cdkFocusInitial>存檔</button> -->
-  <button mat-button (click)="onSaveClick()">存檔</button>
+  <button mat-stroked-button color="accent" (click)="onSaveClick()">存檔</button>
 </div>
