修正：Dialog 儲存時沒有將使用者輸入的資料往外傳問題

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <!-- Header Start-->
-<app-header></app-header>
+<app-header (addData)="addTableData($event)"></app-header>
 <!-- Header End-->
 
 <!-- Main Start-->
