調整：改為使用 FormGroup 來設計封裝 material 元件成為一個自訂的 FormControl

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 
 <!-- Header Start-->
-<app-header (addData)="addTableData($event)"></app-header>
+<!-- <app-header (addData)="addTableData($event)"></app-header> -->
 <!-- Header End-->
 
 <!-- Main Start-->
-<app-main></app-main>
+<!-- <app-main></app-main> -->
+<app-form-controls [dataSource]="controlItemList"></app-form-controls>
 <!-- Main End-->
 
 <!-- Footer Start-->
-<div align="center">
+<!-- <div align="center">
   <app-footer></app-footer>
-</div>
+</div> -->
 <!-- Footer End-->
