--- a/src/app/controls/type/radio-button/radio-button.component.html
+++ b/src/app/controls/type/radio-button/radio-button.component.html
@@ -6,6 +6,10 @@
     [value]="controlItem.value"
   >
   <!-- TODO 選取切換事件尚無法正常動態更新 FormControl 物件 -->
+  <!--
+      FormGroup 沒有即時更新值，可能解決辦法
+      https://mlog.club/article/2533710
+  -->
     <mat-radio-button
       *ngFor="let selectItem of controlItem.dataSource"
       style="margin: 0 10px;"
