--- a/src/app/controls/type/slide-toggle/slide-toggle.component.html
+++ b/src/app/controls/type/slide-toggle/slide-toggle.component.html
@@ -7,3 +7,8 @@
     {{ controlItem.displayName }}
   </mat-slide-toggle>
 </ng-container>
+
+<!--
+    FormGroup 沒有即時更新值，可能解決辦法
+    https://mlog.club/article/2533710
+-->
