新增：紀錄一版，實作將Component 改為 FormControl            - 教學文章：https://dotblogs.com.tw/wellwind/2017/03/20/angular-advanced-customize-component-with-ngmodel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,11 @@
 
 <!-- Main Start-->
 <!-- <app-main></app-main> -->
-<app-form-controls [dataSource]="controlData"></app-form-controls>
+<app-form-controls #myForm [dataSource]="controlData"></app-form-controls>
 <!-- Main End-->
+
+<hr />
+<pre>{{ myForm.customForm.value | json }}</pre>
 
 <!-- TODO 塞假資料 -->
 <app-table-manager
