--- a/src/app/tables/table-manager/table-manager.component.html
+++ b/src/app/tables/table-manager/table-manager.component.html
@@ -23,7 +23,7 @@
       <td mat-cell *matCellDef="let row;">
         <mat-checkbox
           (click)="$event.stopPropagation()"
-          (change)="($event ? selection.toggle(row) : null)"
+          (change)="changeSelected($event, row)"
           [checked]="selection.isSelected(row)"
           [aria-label]="checkboxLabel(row)"
         >
@@ -57,8 +57,9 @@
 
 <br />
 <br />
-<!-- <fub-paginator
+
+<app-paginator
   [rowCount]="dataSource.length"
   [rowPageSize]="pageSize"
   (changePage)="changeTablePage($event)"
-></fub-paginator> -->
+></app-paginator>
