修正：Dialog 新增資料功能異常問題 修正：報表分頁功能無法顯示問題

--- a/src/app/controls/dialog-form-controls/dialog-form-controls.component.html
+++ b/src/app/controls/dialog-form-controls/dialog-form-controls.component.html
@@ -6,7 +6,7 @@
 <div mat-dialog-actions style="float:right;">
   <button mat-stroked-button color="accent" (click)="onNoClick()">取消</button>
   <button mat-stroked-button color="accent" (click)="onResetClick()">重置</button>
-  <button mat-stroked-button color="accent" (click)="onSaveClick()">存檔</button>
+  <button mat-stroked-button color="accent" (click)="onSaveClick(tform.customForm.value)">存檔</button>
 </div>
 
 <br />
