調整：資料表 CheckBox 預設凍結 新增：資料表 Schema 設定檔定義 新增：外部可動態設定要隱藏顯示的欄位

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,9 +45,10 @@
 <!-- TODO 塞假資料 -->
 <app-table-manager
   [pageSize]="3"
-  [StickyColumns]="dataTableStickyCols"
-  [StickyEndColumns]="dataTableStickyEndCols"
+  [stickyColumns]="dataTableStickyCols"
+  [stickyEndColumns]="dataTableStickyEndCols"
   [dataSource]="dataTableSource"
+  [tableSchema]="tableSchema"
   [reportName]="reportName"
   (isSelectedEvent)="isSelectedEvent($event)"
   (selectedAllValueChange)="selectedAllValueChange($event)"
